--- a/menu.html
+++ b/menu.html
@@ -115,20 +115,32 @@
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <img src="assets/img/menu/cocktails/gin-and-tonic.jpg" class="menu-img" alt="gin-and-tonic">
                     <div class="menu-content">
-                        <a>Джин-Тоник 0,25л</a><span>₽350</span>
+                        <a>Джин-Тоник</a><span>₽350</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>250 мл</a>
                     </div>
                     <div class="menu-ingredients">
                         На выбор: кардамон, ромашка, клубника, апельсин.
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
+                    <img src="assets/img/menu/cocktails/martini-fiero-tonic.jpg" class="menu-img"
+                         alt="martini-fiero-tonic">
                     <div class="menu-content">
-                        <a>MARTINI FIERO TONIC 0,25л</a><span>₽370</span>
+                        <a>MARTINI FIERO TONIC</a><span>₽370</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>250 мл</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
+                    <img src="assets/img/menu/cocktails/cool-pink.jpg" class="menu-img" alt="cool-pink">
                     <div class="menu-content">
-                        <a>Прикольный розовый 0,25л</a><span>₽450</span>
+                        <a>Прикольный розовый</a><span>₽450</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>250 мл</a>
                     </div>
                     <div class="menu-ingredients">
                         Для гурманов-приколистов. Замешали нашу фирменную малину-имбиръ с дыней и мятой. Получилось
@@ -136,24 +148,36 @@
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
+                    <img src="assets/img/menu/cocktails/edward-kenway.jpg" class="menu-img" alt="edward-kenway">
                     <div class="menu-content">
-                        <a>ЭДВАРД КЕНУЭЙ 0,25л</a><span>₽500</span>
+                        <a>Эдвард Кенуэй</a><span>₽500</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>250 мл</a>
                     </div>
                     <div class="menu-ingredients">
                         Легкий летний коктейль с Martini Fiero и ликером Triple Sec.
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
+                    <img src="assets/img/menu/cocktails/mors.jpg" class="menu-img" alt="mors">
                     <div class="menu-content">
-                        <a>МОРС 0,4л</a><span>₽550</span>
+                        <a>Морс</a><span>₽550</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>400 мл</a>
                     </div>
                     <div class="menu-ingredients">
                         Морсик для взрослых из клюквы, вишни и граната.
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
+                    <img src="assets/img/menu/cocktails/elizabeth-swann.jpg" class="menu-img" alt="elizabeth-swann">
                     <div class="menu-content">
                         <a>ЭЛИЗАБЕТ СУОНН</a><span>₽550</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>400 мл</a>
                     </div>
                     <div class="menu-ingredients">
                         Лавандовый мягкий лонг с добавлением мятного ликёра и водки
@@ -161,7 +185,10 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
-                        <a>Дайте людям рома 0,4л</a><span>₽550</span>
+                        <a>Дайте людям рома</a><span>₽550</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>400 мл</a>
                     </div>
                     <div class="menu-ingredients">
                         Как Пино-колада, только для настоящих бруталов. Ром на кокосе и грейпфруте, сиропчики и всякие
@@ -170,7 +197,10 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
-                        <a>Жеж-тоник 0,25л</a><span>₽450</span>
+                        <a>Жеж-тоник</a><span>₽450</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>250 мл</a>
                     </div>
                     <div class="menu-ingredients">
                         Однажды Женя смешал тоник, джин и соленую карамель, получилось вкусно.
@@ -178,7 +208,10 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
-                        <a>CHERRY-MARY 0,4л</a><span>₽600</span>
+                        <a>CHERRY-MARY</a><span>₽600</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>400 мл</a>
                     </div>
                     <div class="menu-ingredients">
                         Вишня, кола для прикола, табаско, водка, джин.
@@ -186,7 +219,10 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
-                        <a>Glory-Halls 0,25л</a><span>₽450</span>
+                        <a>Glory-Halls</a><span>₽450</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>250 мл</a>
                     </div>
                     <div class="menu-ingredients">
                         Освежающий коктейль с клубникой, чуток острый.
@@ -194,7 +230,10 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
-                        <a>Mint mind 0,25л</a><span>₽450</span>
+                        <a>Mint mind</a><span>₽450</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>250 мл</a>
                     </div>
                     <div class="menu-ingredients">
                         Мятно, маракуйно, кисло, сладко.
@@ -202,7 +241,10 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
-                        <a>Тэкил рулит 0,25л</a><span>₽550</span>
+                        <a>Тэкил рулит</a><span>₽550</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>250 мл</a>
                     </div>
                     <div class="menu-ingredients">
                         Сухой ананас с текилой и чёрной смородиной.
@@ -210,7 +252,10 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
-                        <a>MiLF'S KISS 0,25л</a><span>₽350</span>
+                        <a>MiLF'S KISS</a><span>₽350</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>250 мл</a>
                     </div>
                     <div class="menu-ingredients">
                         Нежный «мамкин» десерт (клубничный/персиковый).
@@ -220,13 +265,19 @@
                     <div class="menu-content">
                         <a>КРОВАВАЯ БАНЯ 0,4л</a><span>₽500</span>
                     </div>
+                    <div class="menu-size">
+                        <a>400 мл</a>
+                    </div>
                     <div class="menu-ingredients">
                         Томатный, острый, с добавлением нашей фирменной перцовки, огуречного рассола и пряностей.
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
-                        <a>Гудбай 0,25л</a><span>₽600</span>
+                        <a>Гудбай</a><span>₽600</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>250 мл</a>
                     </div>
                     <div class="menu-ingredients">
                         Мы не настаиваем, вы сами отойдете.
@@ -235,7 +286,10 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-cocktails">
                     <div class="menu-content">
-                        <a>Никаясебе 0,25л</a><span>₽600</span>
+                        <a>Никаясебе</a><span>₽600</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>250 мл</a>
                     </div>
                     <div class="menu-ingredients">
                         Второй наш твист на Негрони
