--- a/menu.html
+++ b/menu.html
@@ -47,7 +47,9 @@
         <div class="contact-info d-flex align-items-center">
             <i class="bi bi-phone d-flex align-items-center"><span><a
                     href="tel: +79999935117">+7 (999) 993-51-17</a></span></i>
-            <i class="bi bi-clock d-flex align-items-center ms-4"><span> Пн-Пт: 16:00–04:00<br>Сб-Вс: 16:00–06:00</span></i>
+            <div id="header1">
+                <i class="bi bi-clock d-flex align-items-center ms-4"><span> Пн-Пт: 16:00–04:00 <br>Сб-Вс: 16:00–06:00</span></i>
+            </div>
         </div>
     </div>
 </div>
