--- a/menu.html
+++ b/menu.html
@@ -396,54 +396,6 @@
                 <!-- =======  ======= -->
                 <div class="col-lg-6 menu-item filter-">
                     <div class="menu-sections">
-                        <h2>Горячие закуски \ супы</h2>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Буженина BBQ</a><span>₽450</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Колбаски с капустой и соусом</a><span>₽290</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Колбаски с картофельными дольками</a><span>₽290</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Макароны по-флотски</a><span>₽200</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Сборная Тарелка</a><span>₽500</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Суп-лапша</a><span>₽250</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Сырный суп</a><span>₽250</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Техасский Брискет</a><span>₽600</span>
-                    </div>
-                </div>
-
-
-                <!-- =======  ======= -->
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-sections">
                         <h2>Джин</h2>
                     </div>
                 </div>
@@ -1128,39 +1080,6 @@
                 <!-- =======  ======= -->
                 <div class="col-lg-6 menu-item filter-">
                     <div class="menu-sections">
-                        <h2>Основные холодные закуски</h2>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Бутер с хумусом</a><span>₽250</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Бутер со шпротами, мар. яйцо</a><span>₽250</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Маринованное яйцо</a><span>₽50</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Паштет из цыпленка с луковым мармеладом</a><span>₽250</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Селедка с бородинским хлебом</a><span>₽200</span>
-                    </div>
-                </div>
-
-
-                <!-- =======  ======= -->
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-sections">
                         <h2>Ром</h2>
                     </div>
                 </div>
@@ -1640,6 +1559,81 @@
                 <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a>Чипсы Свинья</a><span>₽220</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-sections">
+                        <h2>Горячие закуски / супы</h2>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Буженина BBQ</a><span>₽450</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Колбаски с капустой и соусом</a><span>₽290</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Колбаски с картофельными дольками</a><span>₽290</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Макароны по-флотски</a><span>₽200</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Сборная Тарелка</a><span>₽500</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Суп-лапша</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Сырный суп</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Техасский Брискет</a><span>₽600</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-sections">
+                        <h2>Основные холодные закуски</h2>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Бутер с хумусом</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Бутер со шпротами, мар. яйцо</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Маринованное яйцо</a><span>₽50</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Паштет из цыпленка с луковым мармеладом</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Селедка с бородинским хлебом</a><span>₽200</span>
                     </div>
                 </div>
 
