--- a/menu.html
+++ b/menu.html
@@ -812,117 +812,7 @@
                 </div>
 
 
-                <!-- =======  ======= -->
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-sections">
-                        <h2>Кухня</h2>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Арахис</a><span>₽150</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Брускетта с паштетом</a><span>₽250</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Буженина с хреном</a><span>₽380</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Бургер с раной говядиной</a><span>₽320</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Бургер с рваной курицей</a><span>₽270</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Бургер с рваной свининой</a><span>₽290</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Вяленая говядина</a><span>₽350</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Вяленая курица</a><span>₽250</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Вяленая свинина</a><span>₽300</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Гренки с моцареллой</a><span>₽150</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Картофель деревенский</a><span>₽120</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Крылья баффало</a><span>₽320</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Купаты куриные</a><span>₽360</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Купаты свиные</a><span>₽390</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Наггетсы</a><span>₽130</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Паутин с мясом и моцареллой</a><span>₽300</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Пельмени фри</a><span>₽150</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Сало двух видов</a><span>₽250</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Сыр косичка</a><span>₽200</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Фисташки</a><span>₽250</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Фри</a><span>₽100</span>
-                    </div>
-                </div>
+
 
 
                 <!-- =======  ======= -->
@@ -968,90 +858,7 @@
                 </div>
 
 
-                <!-- =======  ======= -->
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-sections">
-                        <h2>Напитки безалкогольные</h2>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>ADRENALINE Rush 0.5 л</a><span>₽150</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>AQUA MINERALE0.5 л</a><span>₽80</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>ЛИМОНАД</a><span>₽55</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Напиток "Кока-кола"</a><span>₽440</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Сок</a><span>₽400</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Тоник</a><span>₽300</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Топпинг</a><span>₽35</span>
-                    </div>
-                </div>
 
-
-                <!-- =======  ======= -->
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-sections">
-                        <h2>Нарезки</h2>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Говядина вяленая</a><span>₽350</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Индейка вяленая</a><span>₽350</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Конина вяленая</a><span>₽350</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Курица вяленая</a><span>₽350</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Маринованные овощи</a><span>₽250</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Сало двух видов</a><span>₽250</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Свинина вяленая</a><span>₽350</span>
-                    </div>
-                </div>
 
 
                 <!-- =======  ======= -->
@@ -1417,6 +1224,111 @@
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Арахис</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Брускетта с паштетом</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Буженина с хреном</a><span>₽380</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Бургер с раной говядиной</a><span>₽320</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Бургер с рваной курицей</a><span>₽270</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Бургер с рваной свининой</a><span>₽290</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Вяленая говядина</a><span>₽350</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Вяленая курица</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Вяленая свинина</a><span>₽300</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Гренки с моцареллой</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Картофель деревенский</a><span>₽120</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Крылья баффало</a><span>₽320</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Купаты куриные</a><span>₽360</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Купаты свиные</a><span>₽390</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Наггетсы</a><span>₽130</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Паутин с мясом и моцареллой</a><span>₽300</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Пельмени фри</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Сало двух видов</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Сыр косичка</a><span>₽200</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Фисташки</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Фри</a><span>₽100</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-sections">
                         <h2>Фри</h2>
                     </div>
@@ -1636,6 +1548,46 @@
                         <a>Селедка с бородинским хлебом</a><span>₽200</span>
                     </div>
                 </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-sections">
+                        <h2>Нарезки</h2>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Говядина вяленая</a><span>₽350</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Индейка вяленая</a><span>₽350</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Конина вяленая</a><span>₽350</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Курица вяленая</a><span>₽350</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Маринованные овощи</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Сало двух видов</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Свинина вяленая</a><span>₽350</span>
+                    </div>
+                </div>
 
 
                 <!-- ======= БЕЗАЛКОГОЛЬНЫЕ НАПИТКИ ======= -->
@@ -1680,6 +1632,41 @@
                 <div class="col-lg-6 menu-item filter-soft-drinks">
                     <div class="menu-content">
                         <a>Сок ПЭТ</a><span>₽100</span>
+                    </div>
+                </div>
+                 <div class="col-lg-6 menu-item filter-soft-drinks">
+                    <div class="menu-content">
+                        <a>ADRENALINE Rush 0.5 л</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-soft-drinks">
+                    <div class="menu-content">
+                        <a>AQUA MINERALE0.5 л</a><span>₽80</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-soft-drinks">
+                    <div class="menu-content">
+                        <a>ЛИМОНАД</a><span>₽55</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-soft-drinks">
+                    <div class="menu-content">
+                        <a>Напиток "Кока-кола"</a><span>₽440</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-soft-drinks">
+                    <div class="menu-content">
+                        <a>Сок</a><span>₽400</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-soft-drinks">
+                    <div class="menu-content">
+                        <a>Тоник</a><span>₽300</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-soft-drinks">
+                    <div class="menu-content">
+                        <a>Топпинг</a><span>₽35</span>
                     </div>
                 </div>
                 <!--                &lt;!&ndash; ======= КОКТЕЙЛИ ======= &ndash;&gt;-->
