--- a/menu.html
+++ b/menu.html
@@ -265,7 +265,7 @@
                 <!-- ======= КОНЬЯК ======= -->
                 <div class="col-lg-6 menu-item filter-cognac">
                     <div class="menu-sections">
-                        <h2>КОНЬЯК</h2>
+                        <h2>Коньяк</h2>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-cognac">
@@ -401,7 +401,7 @@
                 <!-- ======= ВИНО ======= -->
                 <div class="col-lg-6 menu-item filter-wine">
                     <div class="menu-sections">
-                        <h2>ВИНО 🍷</h2>
+                        <h2>Вино 🍷</h2>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-wine">
@@ -603,7 +603,7 @@
                 <!-- ======= ВИСКИ ======= -->
                 <div class="col-lg-6 menu-item filter-whiskey">
                     <div class="menu-sections">
-                        <h2>ВИСКИ 🥃</h2>
+                        <h2>Виски 🥃</h2>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-whiskey">
@@ -1651,7 +1651,7 @@
                 <!-- ======= БЕЗАЛКОГОЛЬНЫЕ НАПИТКИ ======= -->
                 <div class="col-lg-6 menu-item filter-soft-drinks">
                     <div class="menu-sections">
-                        <h2>БЕЗАЛКОГОЛЬНЫЕ НАПИТКИ</h2>
+                        <h2>Безалкогольные напитки</h2>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-soft-drinks">
